[fix] arrow z-index 수정 및 border-radius 조정

--- a/src/style/profile.css
+++ b/src/style/profile.css
@@ -278,6 +278,7 @@ body {
 .post-profile-img {
   width: 42px;
   height: 42px;
+  border-radius: 50%;
   margin-right: 10px;
 }
 
@@ -433,7 +434,7 @@ body {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  z-index: 9999;
+  z-index: 10;
   cursor: pointer;
   background-color: white;
   width: 20px;
